--- a/package.json
+++ b/package.json
@@ -18,13 +18,18 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "css-loader": "^0.28.11",
+    "file-loader": "^1.1.11",
+    "node-sass": "^4.9.0",
+    "sass-loader": "^7.0.3",
+    "style-loader": "^0.21.0",
+    "url-loader": "^1.0.1",
     "vue": "^2.5.16",
     "vue-cli": "^2.9.6",
     "vue-loader": "^14.2.3",
     "vue-style-loader": "^4.1.0",
     "vue-template-compiler": "^2.5.16",
-    "webpack": "^4.5.0",
-    "webpack-cli": "^2.0.14",
+    "webpack": "^4.12.0",
+    "webpack-cli": "^2.1.5",
     "webpack-dev-server": "^3.1.1"
   },
   "dependencies": {
