--- a/package.json
+++ b/package.json
@@ -33,8 +33,11 @@
     "webpack-dev-server": "^3.1.1"
   },
   "dependencies": {
+    "bootstrap": "^4.1.1",
+    "jquery": "^3.3.1",
     "lodash": "^4.17.10",
     "npm": "^6.1.0",
+    "popper.js": "^1.14.3",
     "to": "^0.2.9",
     "update": "^0.7.4"
   }
